--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": ""
+    "version": "5.2.0"
   },
   "dependencies": {
     "hexo": "^5.0.0",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
@@ -20,6 +21,7 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
-    "hexo-server": "^2.0.0"
+    "hexo-server": "^2.0.0",
+    "hexo-theme-fluid": "^1.8.6"
   }
 }
