--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 前端进击小组
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: youpin-dgfe@xiaomi.com
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
